removed references to z-index they were causing redenign issues with background resizing when indexes would switch
background would zoom in out ?I'm guessing in accordance with z distance
from "camera"?

--- a/css/custom.css
+++ b/css/custom.css
@@ -63,7 +63,6 @@ a.post-link:focus{
 }
 .page{
 	position: relative;
-	z-index: 10;
 }
 /* This carousel is meant as the main header ful page version and is required to be fixed to top in order for other object to scroll over it */
 .carousel{
@@ -71,7 +70,6 @@ a.post-link:focus{
 	width: 100%;
 	top: 0;
 	position: fixed;
-	z-index: 0;
 }
 .item,
 .active {
@@ -116,9 +114,8 @@ a.post-link:focus{
     text-transform: uppercase;
     font-family: "Novecentowide-Normal";
 	font-size: 15px;
-	background: rgba(10, 10, 10, 0.67);
+	background: rgba(10, 10, 10, 0.67);
 	position: relative;
-	z-index:15;
 }
 .navbar-custom a,
 .navbar-custom .nav .dropdown-menu a {
